--- a/app/views/admin/sponsors/_form.html.haml
+++ b/app/views/admin/sponsors/_form.html.haml
@@ -4,11 +4,22 @@
       .row
         .large-12.columns
           = f.input :name
+
       .row
         .large-12.columns
           = f.input :website, as: :url
+
       .row
         .large-12.columns
+          = f.input :description
+
+      - if current_user.has_role?(:admin)
+        .row
+          .large-6.columns
+            = f.input :level, collection: Sponsor.levels.keys, label_method: :humanize
+
+      .row
+        .large-12.columns.admin_margin
           = f.input :avatar, as: :file, required: !@sponsor.avatar?
           = f.hidden_field :image_cache
 
@@ -23,12 +34,6 @@
             %p Members associated with sponsor
             = f.collection_select :member_ids, Member.all, :id, :full_name,
               { selected: @sponsor.members.map(&:id), prompt: 'Select a member' }, { multiple: true }
-
-    .large-6.columns
-      .row
-        - if current_user.has_role?(:admin)
-          .large-12.columns
-            = f.input :level, collection: Sponsor.levels.keys, label_method: :humanize
 
     .large-6.columns
       .panel.callout
