--- a/app/views/admin/portal/index.html.haml
+++ b/app/views/admin/portal/index.html.haml
@@ -16,6 +16,7 @@
               = humanize_date(workshop.date_and_time, with_time: true)
     .large-4.columns
       = link_to 'View all sponsors', admin_sponsors_path, class: 'button expand round'
+      = link_to 'Sponsor contacts', admin_contacts_path, class: 'button expand round'
       = link_to 'Admin Guide', admin_guide_path, class: 'button expand round'
       = link_to 'Members Directory', admin_members_path, class: 'button expand round'
     %hr
