--- a/app/views/admin/events/edit.html.haml
+++ b/app/views/admin/events/edit.html.haml
@@ -2,117 +2,5 @@
   .row
     .medium-12.columns
       %h2 Edit Event
-
-      = simple_form_for [:admin, @event] do |f|
-        .row
-          .large-12.columns
-            .row
-              .large-4.columns
-                = f.input :name
-            .row
-              .large-4.columns
-                = f.input :email, as: :email, label: 'Contact email'
-              .large-4.columns
-                = f.input :slug
-            .row
-              .large-6.columns
-                = f.input :date_and_time, as: :string, required: true, label: 'Date', input_html: { data: { value: @event.date_and_time.strftime('%d/%m/%Y') } }
-            .row
-              .large-3.columns
-                = f.input :begins_at, as: :string, required: true, input_html: { data: { value: @event.date_and_time.time.strftime('%H:%M') }}
-              .large-3.columns
-                = f.input :ends_at, as: :string, required: true, input_html: { data: { value: @event.ends_at.strftime('%H:%M') }}
-        .row
-          .large-12.columns
-            = f.input :description, as: :text,
-            placeholder: 'Use this space to write an invitation message and description of the event. This copy will also be used in the email invitation. You can use HTML here!'
-        .row
-          .large-12.columns
-            = f.input :info
-        .row
-          .large-12.columns
-            = f.input :schedule
-        .row
-          .large-3.columns
-            = f.association :venue, input_html: { data: { placeholder: 'Select sponsors' }}, required: true
-        .row
-          .large-12.columns
-            %h3
-              Please add sponsors only to either Standard level OR Gold/Silver/Bronze levels.
-        .row
-          .large-3.medium-6.small-12.columns
-            %br
-            = f.association :sponsors, input_html: { data: { placeholder: 'Select standard sponsors' }}, collection: Sponsor.all
-        .row
-          .large-3.medium-6.small-12.columns
-            %br
-            = f.association :bronze_sponsors, input_html: { data: { placeholder: 'Select bronze sponsors' }}, collection: Sponsor.all
-          .large-3.medium-6.small-12.columns
-            %br
-            = f.association :silver_sponsors, input_html: { data: { placeholder: 'Select silver sponsors' }}, collection: Sponsor.all
-          .large-3.medium-6.small-12.columns
-            %br
-            = f.association :gold_sponsors, input_html: { data: { placeholder: 'Select sponsors' }}, collection: Sponsor.all
-        .row
-          .large-6.columns
-            %br
-            %label Organisers
-            = f.collection_select :organisers, Member.all, :id, :full_name, { selected: @event.organisers.map(&:id) }, { multiple: true }
-        .row
-          .large-12.columns
-            %br
-            = f.input :announce_only, as: :boolean, hint: 'Events where invitations are not handled via our application'
-          .large-12.columns
-            %br
-            = f.input :external_url, label: 'External Registration URL', placeholder: 'include protocol, e.g. https://codebar.io'
-
-        .row
-          .large-12.columns
-            %h5 Invitation details
-            .panel.callout
-              .row
-                .large-12.columns
-                  = f.input :tito_url, as: :url, hint: 'Only used for student tickets'
-                .large-6.columns
-                  = f.input :coach_spaces
-                .large-6.columns
-                  = f.input :student_spaces
-              .row
-                .large-12.columns
-                  = f.input :coach_questionnaire
-              .row
-                .large-12.columns
-                  = f.input :student_questionnaire
-              .row
-                .large-12.columns
-                  = f.association :chapters, hint: 'Which chapters do you want to invite to this event? Only one invitation will be emailed out to members with multiple subscriptions.'
-              %br
-              .row
-                .large-12.columns
-                  = f.input :audience, collection: @event.permitted_audience_values,
-                  hint: 'Optionally, specify if invitations should only be sent to students or coaches (ex. a CV workshop targeted toward students may not need invites sent to the entire coach listserv) If left blank, all subscribers to a chapter will be invited via email'
-              .row
-                .large-12.columns
-                  %br
-                  = f.input :invitable, as: :boolean, hint: 'Allow members to RSVP'
-              .row
-                .large-12.columns
-                  = f.input :show_faq, as: :boolean, hint: 'Display FAQ section?'
-              .row
-                .large-12.columns
-                  = f.input :display_coaches, as: :boolean
-              .row
-                .large-12.columns
-                  = f.input :display_students, as: :boolean
-              .row
-                .large-12.columns
-                  = f.input :confirmation_required, as: :boolean, hint: 'Will we be confirming members\' attendance?'
-              .row
-                .large-12.columns
-                  = f.input :surveys_required, as: :boolean, hint: 'Do we need to collect extra info?'
-
-        .row
-          .large-12.columns.text-right
-            = f.submit 'Save', class: 'button'
-
+      = render partial: 'form'
 %br
