not commercial work to be completed by students at our workshops

--- a/app/views/dashboard/participant_guide.html.haml
+++ b/app/views/dashboard/participant_guide.html.haml
@@ -3,10 +3,10 @@
     .large-12.columns
       %h2= t('participant_student_guide.title')
       %p
-      = link_to t('participant_student_guide.attendance_policy.title') , '#attendance' 
+      = link_to t('participant_student_guide.attendance_policy.title') , '#attendance'
       \|
       = link_to t('participant_student_guide.eligibility_criteria.title') , '#eligibility'
-      \| 
+      \|
       = link_to t('participant_student_guide.disability.title') , '#disability'
 
 .stripe.reverse
@@ -29,6 +29,8 @@
             = raw t('participant_student_guide.attendance_policy.rule5')
           %li
             = t('participant_student_guide.attendance_policy.rule6')
+          %li
+            = t('participant_student_guide.attendance_policy.rule7')
 
       %h4= t('dashboard.policy.what_happens')
 
