--- a/app/views/shared/_donation_platforms.html.haml
+++ b/app/views/shared/_donation_platforms.html.haml
@@ -6,7 +6,7 @@
   .columns.small-12.medium-6.large-3.flex-item
     .card.mt1
       =image_tag("logo.png", style: "max-height: 50px;", class: "mb1", alt: "codebar logo")
-      %h3.h6=link_to(t("donation_platforms.donation_form.title"), "https://codebar.enthuse.com/donate/")
+      %h3.h6=link_to(t("donation_platforms.donation_form.title"), new_donation_path)
       %p= t("donation_platforms.donation_form.text")
   .columns.small-12.medium-6.large-3.flex-item
     .card.mt1
