Link new job page to payments

--- a/app/views/member/jobs/new.html.haml
+++ b/app/views/member/jobs/new.html.haml
@@ -31,7 +31,7 @@
               %label{for: 'short'}= t('member.jobs.new.short')
             %li
               %input#donation{type: 'checkbox'}
-              %label{for: 'donation'}= t('member.jobs.new.pay.html', link: new_donation_path)
+              %label{for: 'donation'}= t('member.jobs.new.pay.html', link: new_payment_path)
 
     .row
       .large-12.columns
