--- a/app/views/member/jobs/index.html.haml
+++ b/app/views/member/jobs/index.html.haml
@@ -1,6 +1,6 @@
 .job
   .row
-    .large-12.columns
+    .small-12.columns
       %br
       %ul.breadcrumbs
         %li.current=link_to t('member.jobs.title'), "#"
@@ -26,15 +26,32 @@
       .medium-6.columns.text-right
         = will_paginate(@jobs)
 
-  - else
-    .row
-      .small-12.large-8.large-offset-2.columns
-        %blockquote
-          %p= t('member.jobs.index.testimonial')
-          %footer.clearfix
-            = image_tag('ok.png', size: "30", class: 'th radius left', alt: 'Bruno Girin')
-            %cite.left Bruno Girin, CTO, Imby
+    .row.mt2
+      .small-12.columns
+        =link_to('Post a job', new_member_job_path, class: 'button medium')
 
-  .row.mt2
-    .small-12
-      =link_to('Post a job', new_member_job_path, class: 'button medium')
+  - else
+    .stripe.reverse
+      .row
+        .small-12.large-10.columns
+          %h1= t('member.jobs.index.title', students_count: @students_count)
+          %p= t('member.jobs.index.description')
+          .panel
+            %p
+              = raw t('member.jobs.index.offer.title')
+              %br
+              %span= t('member.jobs.index.offer.job_board')
+              %br
+              %span= t('member.jobs.index.offer.slack')
+              %br
+              %span= t('member.jobs.index.offer.twitter')
+          =link_to('Post a job', new_member_job_path, class: 'button medium')
+    
+    .stripe.reverse
+      .row
+        .small-12.large-8.large-offset-2.columns
+          %blockquote
+            %p= t('member.jobs.index.testimonial')
+            %footer.clearfix
+              = image_tag('ok.png', size: "30", class: 'th radius left', alt: 'Bruno Girin')
+              %cite.left Bruno Girin, CTO, Imby
