--- a/app/views/member/jobs/_form.html.haml
+++ b/app/views/member/jobs/_form.html.haml
@@ -1,50 +1,51 @@
 #new_job
   %h4 Job post details
   .row
-    .large-6.columns
+    .small-12.columns
       = f.input :title, required: true
   .row
-    .large-12.columns
+    .small-12.columns
       = f.input :description, input_html: { rows: 10 }, required: true
   .row
-    .large-6.columns
+    .small-12.columns
       = f.input :salary, required: true
   .row
-    .large-6.columns
+    .small-12.columns
       = f.input :remote, wrapper: :checkbox
       %br
   .row
-    .large-6.columns
+    .small-12.columns
       = f.input :email
   .row
-    .large-6.columns
+    .small-12.columns
       = f.input :link_to_job, required: true
   .row
-    .large-6.columns
+    .small-12.columns
       = f.input :expiry_date, as: :string, required: true, input_html: { data: { value: @job.expiry_date.try(:strftime, '%d/%m/%Y') } }
 
   %hr
   %h4 Company details
   .row
-    .large-6.columns
+    .small-12.columns
       = f.input :company, required: true
   .row
-    .large-6.columns
+    .small-12.columns
       = f.input :company_website, required: true
   .row
-    .large-6.columns
+    .small-12.columns
       = f.input :location, required: true
 
   .row
-    %small
-      = t('member.jobs.new.optional_details_message')
+    .small-12.columns
+      %small
+        = t('member.jobs.new.optional_details_message')
 
   .row
-    .large-6.columns
+    .small-12.columns
       = f.input :company_address
   .row
-    .large-6.columns
+    .small-12.columns
       = f.input :company_postcode
   .row
-    .large-12.columns
+    .small-12.columns
       = f.submit "Submit job for approval", class: "button"
