--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -22,6 +22,7 @@
     .large-3.columns
       %ul.no-bullet
         %li= link_to t("navigation.blog"), "https://medium.com/the-codelog"
+        %li= link_to t("navigation.codebar_stories"), "https://medium.com/codebar-stories"
         %li= link_to t("navigation.coaches"), coaches_path
         %li= link_to t("navigation.sponsors"), sponsors_path
         %li= link_to t("navigation.events"), events_path
