Fix mising parenthesis

--- a/app/views/admin/portal/guide.html.haml
+++ b/app/views/admin/portal/guide.html.haml
@@ -13,7 +13,7 @@
 
       %p Meeting organisers can create and modify monthlies. To make a member into a meeting organiser,
 
-      = dot_markdown("`Member.find(:id).add_role(:organiser, Meeting`")
+      = dot_markdown("`Member.find(:id).add_role(:organiser, Meeting)`")
 
       %p Admins can create and modify sponsors, workshops, meetings and events across all chapters. Admins can also create new chapters. To permission a member as an admin,
 
