--- a/app/views/meetings/_meeting_actions.html.haml
+++ b/app/views/meetings/_meeting_actions.html.haml
@@ -28,8 +28,7 @@
         = link_to "Can't make it anymore? Click here to cancel your spot.", meeting_cancel_path(meeting_id: @meeting.id, token: @invitation.token)
 
     - elsif @meeting.invitable && @meeting.not_full
-      = link_to meeting_invitation_path(@meeting), class: 'button round' do
-        = "Attend"
+      = link_to "Attend", meeting_invitation_path(@meeting, token: @invitation&.token), class: "button round"
 
     - elsif !@meeting.not_full
       %h5 This event is now full.
