meeting actions partial

--- a/app/views/meetings/_meeting_actions.html.haml
+++ b/app/views/meetings/_meeting_actions.html.haml
@@ -1,9 +1,8 @@
 - if @meeting.venue.present?
   %h4 Venue
-  %p.mb-1
-    %strong= @meeting.venue.name
-  =link_to @meeting.venue.website, class: 'border-0' do
-    = image_tag(@meeting.venue.avatar.thumb, alt: @meeting.venue.name)
+  %div.mb-2
+    =link_to @meeting.venue.website, class: 'border-0' do
+      = image_tag(@meeting.venue.avatar.thumb, alt: @meeting.venue.name)
   %strong Address
   %p= @host_address
   - if @host_address.directions
@@ -17,14 +16,14 @@
 
   - if logged_in?
     - if @meeting.past?
-      %p.badge.bg-primary This event has already occurred.
+      %p.badge.bg-primary This event has already occurred
 
     - elsif current_user.banned?
-      %p.badge.bg-danger Your invitations have been temporarily suspended.
+      %p.badge.bg-danger Your invitations have been temporarily suspended
 
     - elsif @meeting.attending?(current_user)
       %p.badge.bg-success You are attending this event
-      = link_to "Can't make it anymore? Click here to cancel your spot.", meeting_cancel_path(meeting_id: @meeting.id, token: @invitation.token)
+      = link_to "Can't make it anymore? Click here to cancel your spots", meeting_cancel_path(meeting_id: @meeting.id, token: @invitation.token)
 
     - elsif @meeting.invitable && @meeting.not_full
       = link_to meeting_invitation_path(@meeting), class: 'btn btn-primary' do
