--- a/app/assets/stylesheets/_bootstrap-custom.scss
+++ b/app/assets/stylesheets/_bootstrap-custom.scss
@@ -31,7 +31,7 @@
 // @import "bootstrap/breadcrumb";
 // @import "bootstrap/pagination";
 @import "bootstrap/badge";
-// @import "bootstrap/alert";
+@import "bootstrap/alert";
 // @import "bootstrap/progress";
 // @import "bootstrap/list-group";
 // @import "bootstrap/close";
