bootstrap sponsors page

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -19,6 +19,9 @@
           = link_to coaches_path, class: "nav-link border-0" do
             Coaches
         %li.nav-item
+          = link_to sponsors_path, class: "nav-link border-0" do
+            Sponsors
+        %li.nav-item
           = link_to jobs_path, class: "nav-link border-0" do
             Jobs
         %li.nav-item
