--- a/app/views/admin/workshop/_attendances.html.haml
+++ b/app/views/admin/workshop/_attendances.html.haml
@@ -19,8 +19,8 @@
             - if invitation.member.newbie?
               %span.has-tip{ 'data-tooltip': '', 'aria-haspopup': 'true', title: 'New attendee.' }
                 %i.fa.fa-paw
-            - elsif invitation.member.more_than_two_absences?
-              %span.has-tip{ 'data-tooltip': '', 'aria-haspopup': 'true', title: 'More than 2 no-shows' }
+            - elsif invitation.member.flag_to_organisers?
+              %span.has-tip{ 'data-tooltip': '', 'aria-haspopup': 'true', title: 'Multiple no shows and attendance warnings in the last six months' }
                 %i.fa.fa-exclamation-circle
 
             = link_to admin_member_path(invitation.member) do
